--- a/vignettes/bibtex.bib
+++ b/vignettes/bibtex.bib
@@ -54,6 +54,45 @@
   doi     = "10.1186/s13059-015-0750-x"
 }
 
+@ARTICLE{Backman2011-uw,
+  title       = {{ChemMine} tools: an online service for analyzing and
+                 clustering small molecules},
+  author      = "Backman, Tyler W H and Cao, Yiqun and Girke, Thomas",
+  affiliation = "Department of Botany and Plant Sciences, University of
+                 California Riverside, Riverside, CA 92521, USA.",
+  journal     = "Nucleic Acids Res.",
+  volume      =  39,
+  number      = "Web Server issue",
+  pages       = "W486--91",
+  month       =  "16~" # may,
+  year        =  2011,
+  url         = "http://dx.doi.org/10.1093/nar/gkr320",
+  issn        = "0305-1048",
+  pmid        = "21576229",
+  doi         = "10.1093/nar/gkr320",
+  pmc         = "PMC3125754"
+}
+
+@ARTICLE{Cao2008-zo,
+  title       = {{ChemmineR}: a compound mining framework for {R}},
+  author      = "Cao, Yiqun and Charisi, Anna and Cheng, Li-Chang and Jiang,
+                 Tao and Girke, Thomas",
+  affiliation = "Department of Computer Science and Engineering, University of
+                 California, Riverside, California, USA.",
+  journal     = "Bioinformatics",
+  volume      =  24,
+  number      =  15,
+  pages       = "1733--1734",
+  month       =  "1~" # aug,
+  year        =  2008,
+  url         = "http://dx.doi.org/10.1093/bioinformatics/btn307",
+  issn        = "1367-4803, 1367-4811",
+  pmid        = "18596077",
+  doi         = "10.1093/bioinformatics/btn307",
+  pmc         = "PMC2638865"
+}
+
+
 
 
 
