--- a/vignettes/longevityTools_eDRUG.Rmd
+++ b/vignettes/longevityTools_eDRUG.Rmd
@@ -337,10 +337,13 @@ saveRDS(degMAgene, "./results/degMAgene.rds")
 <div align="right">[Back to Table of Contents]()</div>
 --> 
 
-## Number of DEGs per drug treatment
+## Number of DEGs across drug treatments
+
+The following plots the number of drug treatments (y-axis) for increasing bin sizes (x-axis) 
+of DEGs. 
 
 ```{r deg_distr, eval=TRUE, message=TRUE}
-degMAgene <- readRDS("./results/degMAgene.rds")
+degMAgene <- readRDS("./results/degMA.rds")
 y <- as.numeric(colSums(degMAgene))
 interval <- table(cut(y, right=FALSE, dig.lab=5,  breaks=c(0, 5, 10, 50, 100, 200, 500, 1000, 10000)))
 df <- data.frame(interval); colnames(df) <- c("Bins", "Counts")
@@ -367,7 +370,7 @@ written to a file named
 PMID26490707 <- read.delim("./data/PMID26490707_S1.xls", comment="#")
 myAnnot <- readRDS("./results/myAnnot.rds") 
 geneid <- as.character(PMID26490707$"NEW.Entrez.ID")
-degMAgene <- readRDS("./results/degMAgene.rds") # Faster than read.delim()
+degMAgene <- readRDS("./results/degMA.rds") # Faster than read.delim()
 degMAsub <- degMAgene[rownames(degMAgene) %in% geneid,]
 degOL_PMID26490707 <- intersectStats(degMAgene, degMAsub)
 write.table(degOL_PMID26490707, file="./results/degOL_PMID26490707.xls", quote=FALSE, sep="\t", col.names = NA) 
@@ -390,10 +393,11 @@ data set is written to a file named [`degOL_PMID26343147.xls`](http://biocluster
 ```{r deg_overlaps_PMID26343147, eval=TRUE}
 PMID26343147 <- read.delim("./data/PMID26343147_S1T1.xls", check.names=FALSE, comment="#")
 myAnnot <- readRDS("./results/myAnnot.rds") 
-affyid <- row.names(myAnnot[myAnnot[,"SYMBOL"] %in% PMID26343147[,"Gene Symbol"], ]) 
+geneid <- as.character(myAnnot[rownames(myAnnot) %in% as.character(PMID26343147[,1]), "ENTREZID"])
+geneid <- geneid[geneid!="NA"]
 degMA <- readRDS("./results/degMA.rds") # Faster then read.delim()
 degMA <- degMA[ , !is.na(colSums(degMA))] # Remove columns where DEG analysis was not possible
-degMAsub <- degMA[affyid,]
+degMAsub <- degMA[geneid,]
 degOL_PMID26343147 <- intersectStats(degMAgene, degMAsub)
 write.table(degOL_PMID26343147, file="./results/degOL_PMID26343147.xls", quote=FALSE, sep="\t", col.names = NA) 
 sum(degOL_PMID26343147[,1] > 0) # Drugs with any overlap
@@ -410,7 +414,30 @@ The final result is written to a file named [`deg_IGF1.xls`](http://biocluster.u
 genesymbols <- c("IGF1", "IGF1R")
 geneids <- unique(as.character(myAnnot[myAnnot$SYMBOL %in% genesymbols,"ENTREZID"]))
 names(geneids) <- unique(as.character(myAnnot[myAnnot$SYMBOL %in% genesymbols,"SYMBOL"]))
-degMAgene <- readRDS("./results/degMAgene.rds") # Faster than read.delim()
+degList <- readRDS("./results/degList.rds") 
+df <- data.frame(row.names=colnames(degList$DEG), check.names=FALSE)
+index <- which(colSums(degList$DEG[geneids,])>= 1) 
+for(i in seq_along(geneids)) {
+    tmp <- data.frame(DEG=degList$DEG[geneids[i],index], logFC=degList$logFC[geneids[i],index], FDR=degList$FDR[geneids[i],index])
+    colnames(tmp) <- paste0(names(geneids)[i], "_", colnames(tmp))
+    df <- cbind(df, tmp[rownames(df),] )    
+}
+df <- df[names(index),]
+write.table(df, file="./results/deg_IGF1.xls", quote=FALSE, sep="\t", col.names = NA) 
+```
+
+Now the final `data.frame` can be sorted by increasing mean FDR values. 
+```{r sort_pvalue, eval=TRUE}
+igfDF <- read.delim("./results/deg_IGF1.xls", row.names=1)
+igfDF[order(rowMeans(igfDF[,c(3,6)])),][1:20,]
+```
+
+<!-- old version
+```{r deg_queries2, eval=TRUE}
+genesymbols <- c("IGF1", "IGF1R")
+geneids <- unique(as.character(myAnnot[myAnnot$SYMBOL %in% genesymbols,"ENTREZID"]))
+names(geneids) <- unique(as.character(myAnnot[myAnnot$SYMBOL %in% genesymbols,"SYMBOL"]))
+degMAgene <- readRDS("./results/degMA.rds") # Faster than read.delim()
 df <- data.frame(row.names=colnames(degMAgene), check.names=FALSE)
 for(i in seq_along(geneids)) df <- cbind(df, as.numeric(degMAgene[geneids[i],]))
 colnames(df) <- names(geneids)
@@ -434,11 +461,7 @@ df <- cbind(df, pvalDF)
 write.table(df, file="./results/deg_IGF1.xls", quote=FALSE, sep="\t", col.names = NA) 
 ```
 
-Now the final `data.frame` can be sorted by increasing mean FDR values. 
-```{r sort_pvalue, eval=TRUE}
-igfDF <- read.delim("./results/deg_IGF1.xls", row.names=1)
-igfDF[order(rowMeans(igfDF[,3:4])),][1:20,]
-```
+--> 
 
 <div align="right">[Back to Table of Contents]()</div>
 
