--- a/vignettes/longevityDrugs.Rmd
+++ b/vignettes/longevityDrugs.Rmd
@@ -88,8 +88,10 @@ library("ChemmineR")
 # Load database
 
 ```{r load_sdf, eval=FALSE}
-sdfset <- read.SDFset("inst/ext/longevityDrugs.sdf")
-plot(sdfset)
+mypath <- system.file("extdata", "longevitydrugs.sdf", package="longevityTools")
+sdfset <- read.SDFset(mypath)
+data(sdfsample)
+plot(sdfsample[1:4], print=FALSE)
 ```
 
 <div align="right">[Back to Table of Contents]()</div>
