--- a/vignettes/06_longevityDrugs/longevityDrugs.Rmd
+++ b/vignettes/06_longevityDrugs/longevityDrugs.Rmd
@@ -79,16 +79,6 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
                 
                 
                 
@@ -151,8 +141,6 @@
                 <!-- special insertion -->
 
                
-                
-                
                 <!-- Send feedback function -->
 <script>
 function SendLinkByMail(href) {
@@ -245,16 +233,6 @@ window.location.href = uri;
 
 
         
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -811,7 +789,7 @@ biocLite("tgirke/longevityTools", build_vignettes=FALSE) # Installs package from
 
 ## Loading of required packages
 
-```{r documentation, eval=FALSE}
+```{r documentation, eval=TRUE}
 library("longevityTools") 
 library("ChemmineR") 
 ```
@@ -820,9 +798,12 @@ library("ChemmineR")
 
 # Load database
 
-```{r load_sdf, eval=FALSE}
-sdfset <- read.SDFset("inst/ext/longevityDrugs.sdf")
-plot(sdfset)
+```{r load_sdf, eval=TRUE}
+mypath <- system.file("extdata", "longevitydrugs.sdf", package="longevityTools")
+sdfset <- read.SDFset(mypath)
+data(sdfsample)
+sdfsample
+plot(sdfsample[1:4], print=FALSE)
 ```
 
 <div align="right">[Back to Table of Contents]()</div>
@@ -856,7 +837,7 @@ sessionInfo()
             <div class="row">
                 <div class="col-lg-12 footer">
                &copy;2016 UC Riverside. All rights reserved. <br />
- Site last generated: Mar 15, 2016 <br />
+ Site last generated: Mar 16, 2016 <br />
 <p><img src="../common_images/company_logo.png/></p>
                 </div>
             </div>
